# tauri-plugin-status-bar

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: StatusBar.kt  StatusBarPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  Info.ios.plist
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/tauri-plugin-status-bar/: ExamplePlugin.swift  StatusBarPlugin.swift
ios/tauri-plugin-status-bar.xcodeproj/: project.pbxproj
ios/tauri-plugin-status-bar.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/tauri-plugin-status-bar.xcodeproj/project.xcworkspace/xcuserdata/wtto.xcuserdatad/: UserInterfaceState.xcuserstate
ios/tauri-plugin-status-bar.xcodeproj/xcuserdata/wtto.xcuserdatad/xcschemes/: xcschememanagement.plist
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: background_color_by_hex_string.toml  background_color_by_name.toml  default_scroll_top.toml  hide.toml  is_visible.toml  overlays_web_view.toml  style_default.toml  style_light_content.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  mobile.rs  models.rs
